--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4161,7 +4161,7 @@ div.section-post-donation-launcher__border-bottom { -webkit-box-shadow: 0 0 6px 
 
 .section-mc-subscription .hide { display: none !important; }
 
-.section-mc-subscription .form-toggle-part { height: 0; margin-top: 0; opacity: 0; -webkit-transition: visibility 0s linear .33s,opacity .33s linear; transition: visibility 0s linear .33s,opacity .33s linear; visibility: hidden; overflow: hidden; }
+.section-mc-subscription .form-toggle-part { height: 0; margin-top: 0; opacity: 0; -webkit-transition: visibility 0s linear .33s,opacity .33s linear; transition: visibility 0s linear .33s,opacity .33s linear; visibility: hidden; }
 
 .section-mc-subscription .form-toggle-part--actived { height: auto; opacity: 1; -webkit-transition-delay: .1s; transition-delay: .1s; visibility: visible; }
 
@@ -4197,13 +4197,15 @@ div.section-post-donation-launcher__border-bottom { -webkit-box-shadow: 0 0 6px 
 
 .section-mc-subscription .form-row .en__field__element { position: relative; width: 100%; }
 
-.section-mc-subscription .name-part .en__field__element--first-name { -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; margin-left: 10px; }
+.section-mc-subscription .name-part .en__field__element--first-name { margin-left: 10px; }
 
 @media only screen and (max-width: 1023px) { .section-mc-subscription .name-part .en__field__element--first-name.en__field__element--is-required:before { display: none; } }
 
-@media only screen and (min-width: 1024px) { .section-mc-subscription .name-part .en__field__element--first-name { -webkit-box-flex: 0; -ms-flex: 0 0 210px; flex: 0 0 210px; margin-left: 30px; } }
+@media only screen and (min-width: 1024px) { .section-mc-subscription .name-part .en__field__element--first-name { margin-left: 30px; } }
 
-@media only screen and (min-width: 1280px) { .section-mc-subscription .name-part .en__field__element--first-name { -webkit-box-flex: 1; -ms-flex: 1 1 auto; flex: 1 1 auto; } }
+@media only screen and (min-width: 1024px) { .section-mc-subscription .name-part .en__field__element--last-name { -webkit-box-flex: 0; -ms-flex: 0 0 210px; flex: 0 0 210px; } }
+
+@media only screen and (min-width: 1280px) { .section-mc-subscription .name-part .en__field__element--last-name { -webkit-box-flex: 1; -ms-flex: 1 1 auto; flex: 1 1 auto; } }
 
 .section-mc-subscription .email-part .do-you-mean { cursor: pointer; }
 
